update : runtimeException to customException [#26]